<!-- SPDX-License-Identifier: GPL-3.0-or-later -->
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <Preference
        app:key="app_theme"
        app:title="@string/pref_app_theme"
        tools:summary="Follow system"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="app_theme_pure_black"
        app:title="@string/pref_pure_black_theme"
        app:summary="@string/pref_pure_black_theme_msg"
        app:iconSpaceReserved="false" />

    <SwitchPreferenceCompat
        app:key="use_system_font"
        app:title="@string/pref_use_system_font"
        app:summary="@string/pref_use_system_font_msg"
        app:iconSpaceReserved="false" />

    <Preference
        app:key="layout_orientation"
        app:title="@string/pref_layout_direction"
        tools:summary="Left to right"
        app:iconSpaceReserved="false" />

    <Preference
        app:key="enabled_features"
        app:title="@string/enable_disable_features"
        app:summary="@string/pref_enable_disable_features_msg"
        app:iconSpaceReserved="false" />

    <!-- Fork: in-app batch-operation progress dialog + the configurable theme
         (text/background/border colour + width) shared by the dialog and the
         themed toasts. -->
    <SwitchPreferenceCompat
        app:key="batch_progress_dialog"
        app:title="@string/pref_batch_progress_dialog"
        app:summary="@string/pref_batch_progress_dialog_msg"
        app:iconSpaceReserved="false" />

    <Preference
        app:key="theme_text_color"
        app:title="@string/pref_theme_text_color"
        app:iconSpaceReserved="false" />

    <Preference
        app:key="theme_background_color"
        app:title="@string/pref_theme_background_color"
        app:iconSpaceReserved="false" />

    <Preference
        app:key="theme_border_color"
        app:title="@string/pref_theme_border_color"
        app:iconSpaceReserved="false" />

    <Preference
        app:key="theme_border_width"
        app:title="@string/pref_theme_border_width"
        app:iconSpaceReserved="false" />
</PreferenceScreen>